<resources>
    <string name="app_name">Nearby Test</string>
    <string name="last_position_title">Last Position</string>
    <string name="current_position_title">Current Position</string>
    <string name="distance">Distance :&#160;</string>
    <string name="latitude">Latitude :&#160;</string>
    <string name="longitude">Longitude :&#160;</string>
    <string name="scan">Scan for Devices</string>
    <string name="toggle_off">Start scanning</string>
    <string name="toggle_on">Stop scanning</string>

</resources>
