<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">


    <TextView
        android:id="@+id/LastPosition"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/last_position_title"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="30sp"
        android:typeface="normal" />

    <TextView
        android:id="@+id/lastLatTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:gravity="center"
        android:textSize="25sp"
        android:padding="2dp"
        android:text="@string/latitude"/>

    <TextView
        android:id="@+id/lastLongTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:textSize="25sp"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/longitude"/>


    <TextView
        android:id="@+id/CurrentPostion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/current_position_title"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="30sp"
        android:typeface="normal" />


    <TextView
        android:id="@+id/latTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:gravity="center"
        android:textSize="25sp"
        android:padding="2dp"
        android:text="@string/latitude"/>

    <TextView
        android:id="@+id/lonTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:textSize="25sp"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/longitude"/>

    <TextView
        android:id="@+id/distanceTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:textSize="25sp"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/distance"/>

   <ToggleButton
       android:id="@+id/toggleButton"
       android:layout_width="300dp"
       android:layout_height="wrap_content"
       android:layout_weight=".05"
       android:paddingRight="40dp"
       android:paddingLeft="40dp"
       android:paddingTop="0dp"
       android:paddingBottom="0dp"
       android:layout_gravity="center"
       android:textOff="@string/toggle_off"
       android:textOn="@string/toggle_on"
       />



</LinearLayout>

